--- a/src/css/style.css
+++ b/src/css/style.css
@@ -121,3 +121,20 @@ input:checked + .slider:before {
   opacity: 1;
   transition: opacity 300ms cubic-bezier(0.55, 0.085, 0.68, 0.53);
 }
+
+.cities-list-cont {
+  width: 30%;
+  max-height: 200px;
+  overflow: hidden;
+}
+
+.cities-list {
+  height: 100%;
+  overflow-y: auto;
+  margin-right: -1.1rem;
+  padding-right: 1.1rem;
+}
+
+.input-warning::placeholder {
+  color: red;
+}
