--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,6 +112,19 @@ input:checked + .slider::before {
   border-radius: 50%;
 }
 
+.fahrenheit {
+  position: relative;
+  top: 7px;
+  left: 7px;
+}
+
+.celsius {
+  position: relative;
+  top: 7px;
+  right: -17px;
+}
+
+
 .text-anim {
   opacity: 0;
   transition: opacity 225ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
